--- a/index.html
+++ b/index.html
@@ -85,20 +85,24 @@
   </nav>
 </div>
 
-<!-- 2022 Exhibit Announcement Section -->
+<!-- 2023 Exhibit Announcement Section -->
 <div id="about">
   <div class="container">
     <div class="section-title text-center center">
-      <h6>Thank You!<br></h6>
+      <h6>Coming Soon<br></h6>
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="CHS_ExhibitPoster_2022-Summer.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="CHS_ExhibitPoster_2023-Summer.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Our summer exhibit and regular open hours have come to an end for the 2022 season. Thank you to everyone who came to see us! We look forward to seeing you again next summer. </p>
+					<!--COMING SOON TEXT-->
+        	<p>Mark your calendars! Our 2023 summer exhibit, "Chateaugay Lakes, 1900-1950," will be opening for the season on June 24th. We hope to see you there!</p>
 
-					<p>Missed the exhibit but want to see it? The entire exhibit is available - panel by panel - in a photo album on our Facebook page. Please click <a href="https://www.facebook.com/media/set/?set=a.550420216881106&type=3" target="new">HERE </a> if you would like to view it.</p>
+         <!-- CLOSED TEXT
+         <p>Our summer exhibit and regular open hours have come to an end for the 2022 season. Thank you to everyone who came to see us! We look forward to seeing you again next summer. </p>
+
+					<p>Missed the exhibit but want to see it? The entire exhibit is available - panel by panel - in a photo album on our Facebook page. Please click <a href="https://www.facebook.com/media/set/?set=a.550420216881106&type=3" target="new">HERE </a> if you would like to view it.</p>-->
         </div>
       </div>  
   </div>
