--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Welcome to the Chateaugay Historical Society, &amp;quot;Early Chateaugay Lake&amp;quot; Exhibit Now Open, Collection Highlight, Extra! Extra! Read All About It!, Want to join in on the fun?, About Us, Chateaugay History, Contact Us">
     <meta name="description" content="">
-    <title>Home</title>
+    <title>CHS</title>
     <link rel="stylesheet" href="css/nicepage.css" media="screen">
 <link rel="stylesheet" href="css/Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
