--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ County.&nbsp;&nbsp;
 </g></svg></span>
                 <h5 class="u-text u-text-7">Email</h5>
                 <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-8">
-                  <a href="mailto:chathistsoc@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">chathistsoc@gmail.com</a>
+                  <a href="mailto:chs@chateaugayhistory.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">chs@chateaugayhistory.org</a>
                 </p>
               </div>
             </div>
@@ -460,7 +460,7 @@ background-color: #333333 !important
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified May 2023.<br>
+          <br>Last Modified June 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
