--- a/Calendar-of-Events.html
+++ b/Calendar-of-Events.html
@@ -96,7 +96,7 @@
     <section class="u-clearfix u-section-1" id="sec-d694">
       <div class="u-clearfix u-sheet u-sheet-1">
         
-        <!--COMING SOON EXHIBIT LANGUAGE-->
+        <!--COMING SOON EXHIBIT LANGUAGE
         <h1 class="u-align-center u-text u-text-default u-text-1">"Chateaugay Lakes, 1900-1950" Exhibit<br>
         </h1>
         <h3 class="u-align-center u-text u-text-default u-text-2">Coming Soon | Summer 2023</h3>
@@ -104,18 +104,19 @@
         <p class="u-align-center u-text u-text-3"> Mark your calendars! Our summer exhibit will be opening for the season on June 24th! The Archival Center, located on the second floor of the Town Hall, will be featuring this new exhibit from 9am until noon <span style="font-weight: 700;">every Wednesday and Saturday until the end September</span> (<span style="font-weight: 700; font-style: italic;">except</span> for the Saturday of Labor Day weekend).&nbsp;<br>
           <br>We hope to see you there!
         </p>
+      -->
 
-        <!--OPEN EXHIBIT LANGUAGE
-        <h1 class="u-align-center u-text u-text-default u-text-1">"Early Chateaugay Lakes" Exhibit<br>
+        <!--OPEN EXHIBIT LANGUAGE-->
+        <h1 class="u-align-center u-text u-text-default u-text-1">"Chateaugay Lakes, 1900-1950" Exhibit<br>
         </h1>
-        <h3 class="u-align-center u-text u-text-default u-text-2">Now On Display | Summer 2022</h3>
-        <img class="u-image u-image-default u-image-1" src="images/CHS_ExhibitPoster_2022-Summer.jpg" alt="" data-image-width="1581" data-image-height="2048">
+        <h3 class="u-align-center u-text u-text-default u-text-2">Now On Display | Summer 2023</h3>
+        <img class="u-image u-image-default u-image-1" src="images/CHS_ExhibitPoster_2023-Summer.jpg" alt="" data-image-width="1581" data-image-height="2048">
         <p class="u-align-center u-text u-text-3"> Our summer exhibit is open! The Archival Center, located on the second floor of the Town Hall, will be open for the exhibit from 9am until noon on <span style="font-weight: 700;">every Wednesday and Saturday until the end of September</span> (<span style="font-weight: 700; font-style: italic;">except</span> for the Saturday of Labor Day weekend).&nbsp;<br>
 
-          <br>We will also have several books for sale: Chateaugay Lake: the Resort Era 1830-1917 by Rev. Henry Ruschmeyer, Brainardsville by Janet Hoy Sterling, An Adirondack Boyhood Remembered by Ralph Hoy, and Early Sporting Visits to Chateaugay Lake published by the CHS.<br>
+         <!-- <br>We will also have several books for sale: Chateaugay Lake: the Resort Era 1830-1917 by Rev. Henry Ruschmeyer, Brainardsville by Janet Hoy Sterling, An Adirondack Boyhood Remembered by Ralph Hoy, and Early Sporting Visits to Chateaugay Lake published by the CHS.<br>
           <br>Hope you can visit and check it out!
-        </p>
-      -->
+        </p> -->
+     
 
        <!--CLOSED EXHIBIT LANGUAGE
       <h1 class="u-align-center u-text u-text-default u-text-1">Thank You!<br>
@@ -161,7 +162,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified May 2023.<br>
+          <br>Last Modified June 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
