--- a/index.html
+++ b/index.html
@@ -221,16 +221,17 @@
           <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-carousel-item u-container-style u-image u-shading u-slide u-image-2" data-image-width="1920" data-image-height="1344">
             <div class="u-container-layout u-container-layout-2">
               
-              <!--COMING SOON EXHIBIT LANGUAGE-->
+              <!--COMING SOON EXHIBIT LANGUAGE
                <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">"Chateaugay Lakes, 1900-1950" Exhibit Coming Soon</h2>
               <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit will be opening for the season on June 24th! For more information, check out our "Calendar of Events". To view past exhibits, click on the "Exhibits" button.
               </p>
+               -->
 
-              <!--OPEN EXHIBIT LANGUAGE
-              <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">"Early Chateaugay Lake" Exhibit Now Open</h2>
+              <!--OPEN EXHIBIT LANGUAGE-->
+              <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">Exhibit Now Open | "Chateaugay Lakes, 1900-1950" </h2>
               <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit is open! The Archival Center will be open for the exhibit from 9am un<span style="font-size: 1.125rem;"></span>til noon on every Wednesday and Saturday until the end of September (with a few exceptions). For more details, visit the "Calendar of Events" page.
               </p>
-             -->
+          
 
               <!--CLOSED EXHIBIT LANGUAGE
               <h2 class="u-text u-text-default u-text-3">Thank You</h2>
