--- a/Calendar-of-Events.html
+++ b/Calendar-of-Events.html
@@ -113,9 +113,8 @@
         <img class="u-image u-image-default u-image-1" src="images/CHS_ExhibitPoster_2023-Summer.jpg" alt="" data-image-width="1581" data-image-height="2048">
         <p class="u-align-center u-text u-text-3"> Our summer exhibit is open! The Archival Center, located on the second floor of the Town Hall, will be open for the exhibit from 9am until noon on <span style="font-weight: 700;">every Wednesday and Saturday until the end of September</span> (<span style="font-weight: 700; font-style: italic;">except</span> for the Saturday of Labor Day weekend).&nbsp;<br>
 
-         <!-- <br>We will also have several books for sale: Chateaugay Lake: the Resort Era 1830-1917 by Rev. Henry Ruschmeyer, Brainardsville by Janet Hoy Sterling, An Adirondack Boyhood Remembered by Ralph Hoy, and Early Sporting Visits to Chateaugay Lake published by the CHS.<br>
-          <br>Hope you can visit and check it out!
-        </p> -->
+         <br>We will also have several books for sale: <i>Chateaugay Lake: the Adirondack Resort Era 1830-1917 </i>by Rev. Henry Ruschmeyer ($25), <i>Brainardsville, NY </i> by Janet Hoy Sterling ($20), and <i>Early Sporting Visits to Chateaugay Lake</i> published by the CHS ($20).
+        </p>
      
 
        <!--CLOSED EXHIBIT LANGUAGE
@@ -162,7 +161,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified June 2023.<br>
+          <br>Last Modified July 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
