--- a/Resources.html
+++ b/Resources.html
@@ -134,6 +134,9 @@
                   <p class="u-align-center u-text u-text-default u-text-12">
                     <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-8" href="https://home.rootsweb.com/" target="_blank">RootsWeb</a>
                   </p>
+                  <p class="u-align-center u-text u-text-default u-text-12">
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-8" href="https://www.aaastateofplay.com/genealogy-for-kids-building-a-family-tree/" target="_blank">Genealogy for Kids: Building a Family Tree</a>
+                  </p>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3">
@@ -232,7 +235,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified May 2023.<br>
+          <br>Last Modified August 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
