Added Link for 2023 Exhibit

--- a/Exhibits.html
+++ b/Exhibits.html
@@ -108,8 +108,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"Chateaugay Lakes, 1900-1950"</h1>
                 <h5 class="u-align-center u-text u-text-default u-text-2">CHS | 2023</h5>
-                <!--<a href="ADD FB LINK HERE" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">View</a> -->
-                <p>COMING SOON</p>
+                <a href="https://www.facebook.com/media/set/?vanity=100057393972683&set=a.785079446748514" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">View</a>
               </div>
             </div>
 
