--- a/Resources.html
+++ b/Resources.html
@@ -107,11 +107,9 @@
                     <a href="https://www.findagrave.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-1" target="_blank">Find A Grave</a>
                   </p>
                  
-                 <!-- 
                  <p class="u-align-center u-text u-text-default u-text-5">
-                    <a href="http://nnytombstoneproject.net" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-2" target="_blank">Franklin County NY Tombstone Transcriptions</a>
+                    <a href="http://nnytombstoneproject.nygenweb.net" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-2" target="_blank">Northern NY Tombstone Transcriptions</a>
                   </p>
-                -->
 
                   <p class="u-align-center u-text u-text-default u-text-6">
                     <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-1 u-text-palette-1-base u-btn-3" href="http://genealogytrails.com/ny/franklin/churches.html" target="_blank">St. Patrick Parish Records</a>
