Closed Exhibit Language
Updated closed exhibit language; commented out open exhibit language

--- a/Calendar-of-Events.html
+++ b/Calendar-of-Events.html
@@ -106,7 +106,7 @@
         </p>
       -->
 
-        <!--OPEN EXHIBIT LANGUAGE-->
+        <!--OPEN EXHIBIT LANGUAGE
         <h1 class="u-align-center u-text u-text-default u-text-1">"Chateaugay Lakes, 1900-1950" Exhibit<br>
         </h1>
         <h3 class="u-align-center u-text u-text-default u-text-2">Now On Display | Summer 2023</h3>
@@ -115,19 +115,20 @@
 
          <br>We will also have several books for sale: <i>Chateaugay Lake: the Adirondack Resort Era 1830-1917 </i>by Rev. Henry Ruschmeyer ($25), <i>Brainardsville, NY </i> by Janet Hoy Sterling ($20), and <i>Early Sporting Visits to Chateaugay Lake</i> published by the CHS ($20).
         </p>
+      -->
      
 
-       <!--CLOSED EXHIBIT LANGUAGE
+       <!--CLOSED EXHIBIT LANGUAGE-->
       <h1 class="u-align-center u-text u-text-default u-text-1">Thank You!<br>
       </h1>
-      <img class="u-image u-image-default u-image-1" src="images/CHS_ExhibitPoster_2022-Summer.jpg" alt="" data-image-width="1581" data-image-height="2048">
-      <p class="u-align-center u-text u-text-3"> Our 2022 exhibit, "Early Chateaugay Lakes," has closed for the season. Thank you to the 200+ people who visited the Archival Center to take in the display and to all those who shared their comments and observations both at the exhibit and on Facebook. We greatly appreciate the support, and look forward to seeing you again next summer!<br>
+      <img class="u-image u-image-default u-image-1" src="images/CHS_ExhibitPoster_2023-Summer.jpg" alt="" data-image-width="1581" data-image-height="2048">
+      <p class="u-align-center u-text u-text-3"> Our 2023 exhibit, "Chateaugay Lakes, 1900-1950," has closed for the season. Thank you to everyone who visited the Archival Center to take in the display and to all those who shared their comments and observations both at the exhibit and on Facebook. We greatly appreciate the support and look forward to seeing you again next summer!<br>
 
-          <br>Missed the exhibit but want to see it? You can visit our "Exhibits" section following the button below to explore past exhibits - panel by panel - in a photo album.
+          <br>Missed the exhibit but want to see it? You can visit our "Exhibits" section by pressing the button below to explore past exhibits - panel by panel - in a photo album.
       </p>
 
         <a href="Exhibits.html" class="u-border-2 u-border-grey-80 u-btn u-button-style u-hover-grey-80 u-none u-text-hover-white u-btn-1">EXHIBITS</a>
-      -->
+    
 
       </div>
     </section>
@@ -161,7 +162,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified July 2023.<br>
+          <br>Last Modified September 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
