--- a/index.html
+++ b/index.html
@@ -227,17 +227,18 @@
               </p>
                -->
 
-              <!--OPEN EXHIBIT LANGUAGE-->
+              <!--OPEN EXHIBIT LANGUAGE
               <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">Exhibit Now Open | "Chateaugay Lakes, 1900-1950" </h2>
               <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit is open! The Archival Center will be open for the exhibit from 9am un<span style="font-size: 1.125rem;"></span>til noon on every Wednesday and Saturday until the end of September (with a few exceptions). For more details, visit the "Calendar of Events" page.
               </p>
+            -->
           
 
-              <!--CLOSED EXHIBIT LANGUAGE
+              <!--CLOSED EXHIBIT LANGUAGE-->
               <h2 class="u-text u-text-default u-text-3">Thank You</h2>
-              <p class="u-text u-text-4"> Our summer exhibit, "Early Chateaugay Lakes," and regular hours have come to an end for the 2022 season. Thank you to everyone who came to see us! Missed it or want to see it again? Check out the "Exhibits" button below.
+              <p class="u-text u-text-4"> Our summer exhibit, "Chateaugay Lakes, 1900-1950," and regular hours have come to an end for the 2023 season. Thank you to everyone who came to see us! Missed it or want to see it again? Check out the "Exhibits" button below.
               </p>
-              -->
+              
 
               <a href="Calendar-of-Events.html" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-2">Calendar OF Events</a>
               <a href="Exhibits.html" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-3">Exhibits
@@ -461,7 +462,7 @@ background-color: #333333 !important
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified June 2023.<br>
+          <br>Last Modified September 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
