--- a/index.html
+++ b/index.html
@@ -302,6 +302,28 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </a>
       </div>
     </section>
+   
+<section class="u-clearfix u-white u-section-3" id="sec-ade4">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-spacing-vertical u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-29-md u-size-29-sm u-size-29-xs u-size-33-lg u-size-38-xl u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h2 class="u-text u-text-default u-text-1">Upcoming Event by CVHS: November 19th</h2>
+                  <p class="u-text u-text-2"> The Chateauguay Valley Historical Society, encouraging education, research and preservation of the history of southwestern Quebec, has asked that we extend an invitation to our community for their upcoming "A Taste of History" event in Ormstown, Canada. You can find additional details of this event, taking place November 19th, in the following image and more about this organization at their linked website.</p>
+                  <a href="http://cvhs.ca/" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-grey-80 u-none u-text-black u-text-hover-white u-btn-1" target="_blank">CVHS Website</a>
+                </div>
+              </div>
+             <div class="u-container-style u-image u-layout-cell u-right-cell u-shading u-size-22-xl u-size-27-lg u-size-31-md u-size-31-sm u-size-31-xs u-image-2" src="" data-image-width="2048" data-image-height="1536">
+                <div class="u-container-layout u-container-layout-2">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="u-clearfix u-palette-5-light-2 u-section-2" id="sec-6f67">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
@@ -462,7 +484,7 @@ background-color: #333333 !important
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2023 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified September 2023.<br>
+          <br>Last Modified November 2023.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
