--- a/index.html
+++ b/index.html
@@ -310,8 +310,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-29-md u-size-29-sm u-size-29-xs u-size-33-lg u-size-38-xl u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1">Upcoming Event by CVHS: November 19th</h2>
-                  <p class="u-text u-text-2"> The Chateaugay Historical Society and the Chateauguay Valley Historical Society (CVHS), headquartered on Route 202 in Hinchinbrooke, Quebec, now have a reciprocal arrangement in which each shares information, publications, etc. with eachother. CVHS has asked that we extend an invitation to our community for their upcoming "A Taste of History" event in Ormstown, Canada. You can find additional details of this event, taking place November 19th, in the following image and more about this organization at their linked website.</p>
+                  <h2 class="u-text u-text-default u-text-1">Cancelled Event by CVHS: November 19th</h2>
+                  <p class="u-text u-text-2"> Due to unforeseen circumstances, Sunday's "Taste of History" event has been cancelled. </p>
+                  <p> The Chateaugay Historical Society and the Chateauguay Valley Historical Society (CVHS), headquartered on Route 202 in Hinchinbrooke, Quebec, now have a reciprocal arrangement in which each shares information, publications, etc. with eachother.  You can find additional details about this organization at their linked website.</p>
                   <a href="http://cvhs.ca/" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-grey-80 u-none u-text-black u-text-hover-white u-btn-1" target="_blank">CVHS Website</a>
                 </div>
               </div>
