--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Welcome to the Chateaugay Historical Society, &amp;quot;Early Chateaugay Lake&amp;quot; Exhibit Now Open, Collection Highlight, Extra! Extra! Read All About It!, Want to join in on the fun?, About Us, Chateaugay History, Contact Us">
     <meta name="description" content="">
-    <title>CHS</title>
+    <title>Chateaugay Historical Society</title>
+    <!--start Favicon Content-->
+    <!--<link rel="icon" type="image/x-icon" href="images/favicon_package_v0/favicon.ico">-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_package_v0/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_package_v0/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_package_v0/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#800000">
+    <meta name="apple-mobile-web-app-title" content="Chateaugay Historical Society">
+    <meta name="application-name" content="Chateaugay Historical Society">
+    <meta name="msapplication-TileColor" content="#f6f3f3">
+    <meta name="theme-color" content="#f6f3f3">
+    <!--End Favicon Content-->
     <link rel="stylesheet" href="css/nicepage.css" media="screen">
 <link rel="stylesheet" href="css/Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
