--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
             <div class="u-container-layout u-container-layout-2">
               
               <!--COMING SOON EXHIBIT LANGUAGE-->
-               <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">"A Walk Down Main Street in the 1950s & '60s" Exhibit Coming Soon</h2>
+               <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">"A Walk Down Main Street in the 1950s & '60s"</h2>
+                <h2>Exhibit Coming Soon</h2>
               <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit will be opening for the season on June 1st! For more information, check out our "Calendar of Events". To view past exhibits, click on the "Exhibits" button.
               </p>
 
