--- a/index.html
+++ b/index.html
@@ -233,17 +233,17 @@
           <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-carousel-item u-container-style u-image u-shading u-slide u-image-2" data-image-width="1920" data-image-height="1344">
             <div class="u-container-layout u-container-layout-2">
               
-              <!--COMING SOON EXHIBIT LANGUAGE-->
+              <!--COMING SOON EXHIBIT LANGUAGE
                <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">"A Walk Down Main Street in the 1950s & '60s"</h2>
                 <h2>Exhibit Coming Soon</h2>
               <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit will be opening for the season on June 1st! For more information, check out our "Calendar of Events". To view past exhibits, click on the "Exhibits" button.
               </p>
-
-              <!--OPEN EXHIBIT LANGUAGE
-              <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">Exhibit Now Open | "Chateaugay Lakes, 1900-1950" </h2>
-              <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit is open! The Archival Center will be open for the exhibit from 9am un<span style="font-size: 1.125rem;"></span>til noon on every Wednesday and Saturday until the end of September (with a few exceptions). For more details, visit the "Calendar of Events" page.
-              </p>
             -->
+
+              <!--OPEN EXHIBIT LANGUAGE-->
+              <h2 class="u-align-center-xs u-align-left-xl u-text u-text-default u-text-3">Exhibit Now Open | "A Walk Down Main Street in the 1950s & '60s"</h2>
+              <p class="u-align-center-xl u-text u-text-4"> Our summer exhibit is open! The Archival Center will be open for the exhibit from 9am until noon on <span style="font-size: 1.125rem;">every Wednesday and Saturday until the end of September</span><!--(with a few exceptions)-->. For more details, visit the "Calendar of Events" page.
+              </p>
 
             <!--OPEN HOUSE LANGUAGE
               <h2 class="u-text u-text-default u-text-5">Cabin Fever Open House </h2>
@@ -486,7 +486,7 @@ background-color: #333333 !important
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2024 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified May 2024.<br>
+          <br>Last Modified June 2024.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
