Text Update - Learn
updated text in block for tours/historic sites

--- a/Learn.html
+++ b/Learn.html
@@ -131,9 +131,9 @@
                       <p class="u-align-center u-text u-text-body-alt-color u-text-6">Online galleries of past exhibits created by the Historical Society as well as virtual exhibits.</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-hover-feature u-image u-layout-cell u-shading u-size-20 u-image-4" data-href="Historic-Sites.html" data-image-width="1500" data-image-height="1200" title="Local Tours">
+                  <div class="u-container-style u-hover-feature u-image u-layout-cell u-shading u-size-20 u-image-4" data-href="Historic-Sites.html" data-image-width="1500" data-image-height="1200" title="Historic Sites">
                     <div class="u-container-layout u-container-layout-4">
-                      <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-body-alt-color u-text-default-lg u-text-default-xl u-text-7">Local Tours</h2>
+                      <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-body-alt-color u-text-default-lg u-text-default-xl u-text-7">Historic Sites</h2>
                       <p class="u-align-center u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-xl u-text-8"> Whether you are looking to explore Chateaugay by foot, car or from the comfort of your home, these resources will be of interest to you!</p>
                     </div>
                   </div>
