Text Update for Coming Soon
Added more descriptive text about project background and goals.

--- a/Beman.html
+++ b/Beman.html
@@ -106,9 +106,15 @@
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-33 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-text u-text-default u-text-2">Coming Soon!</h2>
-                  <p class="u-text u-text-3">Historic Site Kiosk & Website
-                     <br> Please check back as we develop this exciting project. <br> Anticipated opening & release: Spring 2025
+                  <p class="u-text u-text-3"> <b><i>What: </i></b> Historic Site Kiosk & Website
+                      <br> <b><i>Anticipated opening & release:</i></b> Spring 2025
                   </p>
+                  <p>The members of the Board of Trustees are excited to share progress in the establishment of the Nathan Beman Homestead historic site. This project has been in the works for several years to recognize one of Chateaugay’s first two settlers back in 1796. </p>
+
+                  <p>A pavilion has been completed in the vicinity of the original homestead site. In the spring of 2025, story boards will be installed on pedestals in this new structure to tell the story of Nathan Beman’s role in the survey and founding of Chateaugay, life as an early settler, archeological excavation of the historic site, and the impact the Beman family has had on the local area. </p>
+
+                  <p>Several events are being planned to celebrate Nathan Beman and the completion of the site during the spring and summer of 2025 including a ribbon cutting at the pavilion and a summer exhibit. Check back on the website, follow us on Facebook, and read our newsletter for updates on the project’s progress!</p>
+
 
                <!--
                   <a href="About.html#sec-577b" class="u-align-center-xs u-border-2 u-border-black u-btn u-button-style u-hover-grey-80 u-none u-text-hover-white u-btn-1">Newsletter</a>
@@ -262,7 +268,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2024 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified August 2024.<br>
+          <br>Last Modified September 2024.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
