--- a/Exhibits.html
+++ b/Exhibits.html
@@ -105,6 +105,14 @@
           <div class="u-repeater u-repeater-1">
 
            
+            <div class="u-align-center u-border-2 u-border-grey-75 u-container-style u-image u-list-item u-repeater-item u-shading u-image-9" data-image-width="990" data-image-height="746">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"A Walk Down Main Street in the 1950s & '60s"</h1>
+                <h5 class="u-align-center u-text u-text-default u-text-2">CHS | 2024</h5>
+                <a href="" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">COMING SOON</a>
+              </div>
+            </div>
+
             <div class="u-align-center u-border-2 u-border-grey-75 u-container-style u-image u-list-item u-repeater-item u-shading u-image-8" data-image-width="990" data-image-height="746">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"Cabin Fever Open House"</h1>
@@ -183,7 +191,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2024 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified August 2024.<br>
+          <br>Last Modified October 2024.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
