--- a/Exhibits.html
+++ b/Exhibits.html
@@ -109,7 +109,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"A Walk Down Main Street in the 1950s & '60s"</h1>
                 <h5 class="u-align-center u-text u-text-default u-text-2">CHS | 2024</h5>
-                <a href="" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">COMING SOON</a>
+                <a href="https://www.facebook.com/media/set/?vanity=100057393972683&set=a.1032212945368495" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">View</a>
               </div>
             </div>
 
