--- a/Historic-Sites.html
+++ b/Historic-Sites.html
@@ -105,11 +105,15 @@
         <h4 class="u-align-center u-text u-text-default u-text-29">Self-Guided Tours</h4>
         <div class="u-align-center u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-8"></div>
 
-        <p class="u-align-justify u-text u-text-2"> Discover more about Chateaugay through our self-guided tours! You can read through the brochures at home or follow along as you walk the route yourself to learn more about our community. Check back in as we have more content planned for the future!&nbsp;<b>
+        <p class="u-align-justify u-text u-text-2"> Discover more about Chateaugay through our self-guided tours! You can read through the brochures at home or follow along as you navigate the route yourself to learn more about our community.&nbsp;<b>
             <br>
-            <br>If taking a self-guided tour,</b>&nbsp;please be respectful of the stops along the route; remain on the sidewalk unless it is a space that is open to the public, and be respectful of the families and business occupying these spaces.
+            <br>Please be respectful of the stops along the route.</b> A reminder: there is an etiquette to be observed as you take your tour. While we have attempted to place our markers on town or village rights-of-way, most of the actual sites you will be visiting are on private property. <b>It is absolutely necessary that you respect the privacy of the property owners and remain in public areas while enjoying our community’s history. Trespassing is unlawful.</b>
         </p>
-        <a href="files/AARCHChateaugayWalkingTour-Brochure2.pdf" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-file-link u-hover-grey-80 u-none u-text-hover-white u-btn-1" target="_blank"><span class="u-file-icon u-icon"><img src="images/2810390.png" alt=""></span>&nbsp;Village of Chateaugay&nbsp;<br>Walking Tour
+
+         <a href="files/HeritageTrail.pdf" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-file-link u-hover-grey-80 u-none u-text-hover-white u-btn-1" target="_blank"><span class="u-file-icon u-icon"><img src="images/2810390.png" alt=""></span>&nbsp;Heritage Trail&nbsp;<br>Tour Book
+         </a>
+
+        <a href="files/AARCHChateaugayWalkingTour-Brochure2.pdf" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-file-link u-hover-grey-80 u-none u-text-hover-white u-btn-1" target="_blank"><span class="u-file-icon u-icon"><img src="images/2810390.png" alt=""></span>&nbsp;Village of Chateaugay&nbsp;<br>AARCH Walking Tour
         </a>
 
     <!--<h4 class="u-align-center u-text u-text-default u-text-29">TEXT</h4> -->
@@ -131,8 +135,8 @@
             c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
           </a>
         </div>
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2024 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified August 2024.<br>
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2024-2025 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
+          <br>Last Modified March 2025.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
