--- a/Beman-Excavation.html
+++ b/Beman-Excavation.html
@@ -153,7 +153,7 @@
 <!--NAVIGATION TO OTHER BEMAN CONTENT-->
 <section class="u-clearfix u-section-2" id="sec-f4fd">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; text-align: center; border-bottom: 4px solid #6F7E44; display: inline-block;">Discover More Beman Content</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; text-align: center; border-bottom: 4px solid #6F7E44; display: inline-block;">Discover More Content</h1>
  
  <section class="u-clearfix u-grey-80 u-section-4" id="carousel_ea16">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
