--- a/Beman-Excavation.html
+++ b/Beman-Excavation.html
@@ -101,7 +101,7 @@
 <!--WEBPAGE CONTENT-->
     <section class="u-clearfix u-section-1" id="sec-6771">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; border-bottom: 4px solid #6F7E44; display: inline-block;">Beman Excavation</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; ext-align: center; border-bottom: 4px solid #6F7E44; display: inline-block;">Beman Excavation</h1>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-image u-list-item u-repeater-item u-image-1" data-image-width="2016" data-image-height="1512">
@@ -117,7 +117,6 @@
         </div>
     <!--TEXT-->
      <div class="u-text u-text-3">
-                  <p>
         <h4 style="color: #5D392E;">Process</h4>
         <p>In 2003, the County of Franklin Industrial Development Agency (CFIDA) contracted with Hartgen Archaeological Associates of Albany, New York to conduct an archaeological study within the recently established Chateaugay Business Park.</p>
         <p>The resulting study was mandated by and in compliance with the National Historic Preservation Act. The goal was to determine whether any cultural materials were present on the Business Park acreage.</p>
