--- a/Beman-Survey.html
+++ b/Beman-Survey.html
@@ -24,7 +24,7 @@
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="1795 Survey and Founding">
+    <meta property="og:title" content="1795 Survey and Founding Chateaugay">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
@@ -101,7 +101,7 @@
 <!--WEBPAGE CONTENT-->
     <section class="u-clearfix u-section-1" id="sec-6771">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; ext-align: center; border-bottom: 4px solid #6F7E44; display: inline-block;">Survey of 1795 & Founding of Chateaugay</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-1" style="color: #5D392E; text-align: center; border-bottom: 4px solid #6F7E44; display: inline-block;">Survey of 1795 & Founding of Chateaugay</h1>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-image u-list-item u-repeater-item u-image-1" data-image-width="2016" data-image-height="1512">
