--- a/Historic-Sites.html
+++ b/Historic-Sites.html
@@ -102,7 +102,7 @@
 
         <img class="u-image u-image-default u-image-1" src="images/DSCN0756_e.jpg" alt="" data-image-width="1500" data-image-height="1200">
 
-        <h4 class="u-align-center u-text u-text-default u-text-29">Self-Guided Tours</h4>
+        <h3 class="u-align-center u-text u-text-default u-text-29">Self-Guided Tours</h3>
         <div class="u-align-center u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-8"></div>
 
         <p class="u-align-justify u-text u-text-2"> Discover more about Chateaugay through our self-guided tours! You can read through the brochures at home or follow along as you navigate the route yourself to learn more about our community.&nbsp;<b>
@@ -116,10 +116,10 @@
         <a href="files/AARCHChateaugayWalkingTour-Brochure2.pdf" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-file-link u-hover-grey-80 u-none u-text-hover-white u-btn-1" target="_blank"><span class="u-file-icon u-icon"><img src="images/2810390.png" alt=""></span>&nbsp;Village of Chateaugay&nbsp;<br>AARCH Walking Tour
         </a>
 
-    <!--<h4 class="u-align-center u-text u-text-default u-text-29">TEXT</h4> -->
+      <h3 class="u-align-center u-text u-text-default u-text-29">Sites</h3>
         <div class="u-align-center u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-8"></div>
     
-        <a href="Beman.html" class="u-align-center-xs u-border-2 u-border-black u-btn u-button-style u-hover-grey-80 u-none u-text-hover-white u-btn-1">Nathan Beman Homestead</a>
+        <a href="Beman.html" class="u-align-center-xs u-border-2 u-border-black u-btn u-button-style u-hover-grey-80 u-none u-text-hover-white u-btn-1">Nathan Beman Historical Site</a>
         
       </div>
 
