--- a/Beman-Survey.html
+++ b/Beman-Survey.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Nathan Beman, Land Survey, Chateaugay Founding">
     <meta name="description" content="">
-    <title>Beman: Excavation</title>
+    <title>Beman: Survey</title>
     <link rel="stylesheet" href="css/nicepage.css" media="screen">
 <link rel="stylesheet" href="css/Beman-Survey.css" media="screen">
     <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
