Hyperlink booklet & Opening Text Edits
- hyperlinked heritage trail booklet
- started revising "Open Exhibit" text for 2025 season

--- a/Calendar-of-Events.html
+++ b/Calendar-of-Events.html
@@ -130,7 +130,7 @@
 
       <h4>New Project Unveiling: <i>A Heritage Trail in Chateaugay</i></h4>
 
-          <p>In addition to the kiosk and exhibit openings on May 10th, we will also be unveiling our newest major project: A <i>Heritage Trail in Chateaugay</i>. </p>
+          <p>In addition to the kiosk and exhibit openings on May 10th, we will also be unveiling our newest major project: a <a href="https://chateaugayhistory.org/files/HeritageTrail.pdf" target="new"><i>Heritage Trail in Chateaugay</i></a>. </p>
 
           <p>The Society has identified 66 locations within the Town and Village of Chateaugay which have historic significance for our community. These locations include: 30 historic markers, 22 other structures and sites, along with 14 local cemeteries and burial grounds.</p>
 
@@ -155,12 +155,21 @@
       
 
   <!--OPEN EXHIBIT LANGUAGE
-        <h1 class="u-align-center u-text u-text-default u-text-1">"A Walk Down Main Street in the 1950s & '60s" Exhibit<br>
+        <h1 class="u-align-center u-text u-text-default u-text-1">Chateaugay’s Founders: Nathan Beman and Benjamin Roberts" Exhibit<br>
         </h1>
-        <h3 class="u-align-center u-text u-text-default u-text-2">Now On Display | Summer 2024</h3>
-        <img class="u-image u-image-default u-image-1" src="images/2024_CHS-SummerExhibit_Poster-Final.png" alt="" data-image-width="1581" data-image-height="2048">
-        <p class="u-align-center u-text u-text-3"> 
-          <p>Let us transport you to a time and place you may even remember, the 1950s and ‘60s in the village of Chateaugay. Come “walk” up one side of the street and back down the other, from the Chateaugay River on the west end to Boardman Brook on the east, to explore the many businesses that lined the street including restaurants, grocery stores, bars, doctors, dentists, and pharmacies along with hardware, clothing, jewelry, barbers and beauticians, lawyers and realtors, bankers and tailors, insurance and photography, service stations, hotels, and even ice cream soda shops. Maybe you will be able to reminisce, maybe you will be educated about what made our village so unique before your time. And, maybe you’ll even run into some folks that you used to walk these very same streets with “back in the day.”</p>
+        <h3 class="u-align-center u-text u-text-default u-text-2">Now On Display | Summer 2025</h3>
+        <img class="u-image u-image-default u-image-1" src="images/2025-SummerExhibit-Founders.jpg" alt="" data-image-width="1581" data-image-height="2048">
+         <p>During 2025, the Chateaugay Historical Society will be honoring our community’s founders, Nathan Beman and Benjamin Roberts, both veterans of the American Revolution.</p>
+
+          <p>The pair first came here in the summer of 1795 when they were part of a survey party that was tasked with laying out the Great Lots of Township No. 7. They were impressed with the wilderness here and both returned the next year with their families and became the first settlers in Chateaugay, which was first known as “Four Corners”. This exhibit will explore the lives of these two early families from their time before Chateaugay, exploration, settlement, and descendents.</p>
+
+          <p>In addition to the exhibit, please enjoy several new resources to explore Chateaugay's past including:<p>
+
+          <li><b>Nathan Beman Historic Kiosk, Chasm Road</b> 
+            <br>A newly completed information kiosk at the Nathan Beman Homestead Site on the Chasm Road (County Route 35), approximately .2 miles from Route 11. This new kiosk has been placed at a significant location from Chateaugay's earliest history.</li>
+
+            <br>
+
         
         The Archival Center, located on the second floor of the Town Hall, will be featuring this new exhibit from 9am until noon <span style="font-weight: 700;">every Wednesday and Saturday until the end September. </span>
         <br>
@@ -252,7 +261,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2021-2025 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified April 2025.<br>
+          <br>Last Modified May 2025.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
