--- a/Exhibits.html
+++ b/Exhibits.html
@@ -104,7 +104,15 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
 
-           
+            <div class="u-align-center u-border-2 u-border-grey-75 u-container-style u-image u-list-item u-repeater-item u-shading u-image-10" data-image-width="990" data-image-height="746">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"Chateaugay’s Founders: Nathan Beman and Benjamin Roberts"</h1>
+                <h5 class="u-align-center u-text u-text-default u-text-2">CHS | 2025</h5>
+                <a href="https://www.facebook.com/media/set/?vanity=100057393972683&set=a.1281161057140348" class="u-border-2 u-border-white u-btn u-button-style u-hover-grey-80 u-none u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">View</a>
+              </div>
+            </div>
+
+
             <div class="u-align-center u-border-2 u-border-grey-75 u-container-style u-image u-list-item u-repeater-item u-shading u-image-9" data-image-width="990" data-image-height="746">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">"A Walk Down Main Street in the 1950s & '60s"</h1>
@@ -191,7 +199,7 @@
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">© 2021-2025 Chateaugay Historical Society<br> Designed by Chateaugay Historical Society using <a href="https://nicepage.com/html-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">nicepage</a>
-          <br>Last Modified March 2025.<br>
+          <br>Last Modified October 2025.<br>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
